---
source: src/program/graph.rs
expression: "ProgramDebugWrapper { program: &scheduled_program }"
---
digraph {
	entry [label="Entry Point"]
	entry -> "first-block_start"
	subgraph "cluster_first-block" {
		label="first-block"
		node [ style="filled" ]
		"first-block_start" [ label=start, shape=circle ]
		"first-block_start" -> "first-block_0" [ label="frame" ]
		"first-block_start" -> "first-block_end" [ label="ordering" ]
		"first-block_0" [label="PULSE 0 \"rf\" test(duration: 1000000.0)"]
		"first-block_0" -> "first-block_end" [ label="frame" ]
		"first-block_end" [ label=end, shape=circle ]
	}
"first-block_end" -> "third-block_start" [label="if ro[0] != 0"]
"first-block_end" -> "second-block_start" [label="if ro[0] == 0"]
	subgraph "cluster_second-block" {
		label="second-block"
		node [ style="filled" ]
		"second-block_start" [ label=start, shape=circle ]
		"second-block_start" -> "second-block_0" [ label="frame" ]
		"second-block_start" -> "second-block_end" [ label="ordering" ]
		"second-block_0" [label="PULSE 0 \"rf\" test(duration: 1000000.0)"]
		"second-block_0" -> "second-block_end" [ label="frame" ]
		"second-block_end" [ label=end, shape=circle ]
	}
"second-block_end" -> "third-block_start" [label="always"]
	subgraph "cluster_third-block" {
		label="third-block"
		node [ style="filled" ]
		"third-block_start" [ label=start, shape=circle ]
		"third-block_start" -> "third-block_0" [ label="frame" ]
		"third-block_start" -> "third-block_end" [ label="ordering" ]
		"third-block_0" [label="PULSE 0 \"rf\" test(duration: 1000000.0)"]
		"third-block_0" -> "third-block_end" [ label="frame" ]
		"third-block_end" [ label=end, shape=circle ]
	}
}

